--- a/Basics/p1.html
+++ b/Basics/p1.html
@@ -15,7 +15,10 @@
 
     <hr>
 
-    
+    <h1>Inline CSS</h1>
+    <h2 style="background-color: aquamarine;color: black;">This is Head tag</h2>
+    <h2 style="background-color: aquamarine;color: black;">This is Head tag</h2>
+    <h2 style="background-color: aquamarine;color: red;">This is Head tag</h2>
     
 </body>
 </html>
