--- a/Basics/p3.html
+++ b/Basics/p3.html
@@ -18,8 +18,9 @@
         }
         .combination > div {
             background-color: aliceblue;
+            color: green;
         }
-        .combination >div>h3{
+        .combination > div > h3 {
             color: black;
         }
     </style>
