--- a/Basics/p5.html
+++ b/Basics/p5.html
@@ -18,6 +18,7 @@
         }
         .combination~div{
             background-color: purple;
+            color: brown;
         }
     </style>
 </head>
