completed css box-model and advanced 4 programs

--- a/Basics/p15.html
+++ b/Basics/p15.html
@@ -14,7 +14,7 @@
     <hr>
     <h2>ODD-EVEN TABLE</h2>
     <hr>
-    <table class="odd-even-table">
+    <table class="layout-table">
         <caption>Employee Details</caption>
         <tr>
             <th>#</th>
@@ -28,7 +28,7 @@
         </tr>
         <tr>
             <td>1</td>
-            <td>Gokul</td>
+            <td>Gokullllllllllllllllllllllllllllllllllllllll</td>
             <td>100</td>
         </tr>
         <tr>
