--- a/Basics/p17.html
+++ b/Basics/p17.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS BASICS</title>
-    <link rel="shortcut icon" href="assets/images/education.png" type="image/x-icon">
-    <link rel="stylesheet" href="assets/css/dummy.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header class="header">
@@ -21,7 +20,7 @@
             </ul>
         </nav>
     </header>
-    <section class="banner2 bannerCommonClass">
+    <section class="banner1 bannerCommonClass">
         <h1>WELCOME TO CSS</h1>
         <p>BANNER USING SINGLE COLOR</p>
     </section>
