--- a/Box Model/p2.html
+++ b/Box Model/p2.html
@@ -9,12 +9,12 @@
 <body>
     <section class="jumbotron">
         <h1>
-            CSS PADDING
+            CSS BORDER
         </h1>
-        <p>The CSS padding properties allow you to set the spacing between the content of an element and its border ( or the edge of the element's box,if it has no defined border</p>
+        <p>Border appear directly between margin and padding .It can either be predefined style like solid line , dotted line or double line or it can be an image</p>
 
     </section>
-    <section class="cssPadding">
+    <section class="cssBorder">
         <h1>This is First H1</h1>
         <h1>This is Second H1</h1>
         <h1>This is Third H1</h1>
