--- a/Box Model/p3.html
+++ b/Box Model/p3.html
@@ -9,12 +9,12 @@
 <body>
     <section class="jumbotron">
         <h1>
-            CSS PADDING
+            CSS MARGIN
         </h1>
-        <p>The CSS padding properties allow you to set the spacing between the content of an element and its border ( or the edge of the element's box,if it has no defined border</p>
+        <p>The CSS Margin properties allow us to set the spacing around the border of an element's box.</p>
 
     </section>
-    <section class="cssPadding">
+    <section class="cssMargin">
         <h1>This is First H1</h1>
         <h1>This is Second H1</h1>
         <h1>This is Third H1</h1>
